--- a/templates/result.html
+++ b/templates/result.html
@@ -22,7 +22,7 @@ body {
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 75%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -65,7 +65,7 @@ input[type=submit] {
 <div class="hero-image">
   <div class="hero-text">
     <h1 style="font-size:50px">Image Classifier</h1>
-    <h3>Upload a picture to see what the image classifier thinks! </h3>
+    <h3>Upload a picture to see what the image classifier predicts! </h3>
 	<form method ='post' enctype=multipart/form-data>
 		<input type="file" name="file">
 		<input type="submit" value="upload">
